# emag-2537

./: main.py  pyproject.toml
emag_stock_monitor/page_handlers/: cart_page.py  list_page.py
